# CryptoDB

./: .gitignore  README.md  alembic.ini  pyproject.toml
.hermes/plans/: 2026-04-25_134742-cryptodb.md
alembic/: env.py
alembic/versions/: 23edf4112cc2_initial_migration.py
src/cryptodb/: config.py  engine.py  exceptions.py  logging_config.py
src/cryptodb/api/: dependencies.py  main.py  metrics.py  rate_limit.py  routes.py
src/cryptodb/auth/: acl.py  geo.py  hardware.py  mfa.py  rbac.py  session.py  users.py
src/cryptodb/cli/: main.py
src/cryptodb/compliance/: reports.py
src/cryptodb/crypto/: ciphers.py  envelope.py  he.py  integrity.py  keystore.py  recovery.py  rotation.py  searchable.py  shredding.py
src/cryptodb/db/: connection.py  metadata.py  versions.py
src/cryptodb/integrations/: webhook.py
src/cryptodb/ledger/: anomaly.py  chain.py  export.py  verify.py
src/cryptodb/replication/: __init__.py  engine.py
src/cryptodb/sdk/: client.py
src/cryptodb/storage/: blob.py  compression.py
tests/: conftest.py
tests/integration/: test_api.py  test_engine.py  test_routes.py
tests/unit/: test_acl.py  test_anomaly.py  test_api_key_mgmt.py  test_auth_session.py  test_ciphers.py  test_cli.py  test_compliance.py  test_compression.py  test_crypto.py  test_engine.py  test_geo.py  test_hardware.py  test_he.py  test_keystore.py  test_ledger_export.py  test_ledger_verify.py  test_logging_config.py  test_metrics.py  test_recovery.py  test_replication.py  test_rotation.py  test_sdk_client.py  test_shredding.py  test_versions.py
